# server/api/Controller/LibraryController.cs
@@ -1,21 +1,23 @@
 
 
 using api.DTOS.Request;
+using efscaffold.Entities;
 using Microsoft.AspNetCore.Mvc;
 
 public class LibraryController (ILibraryService libraryService) : ControllerBase
 {
+    
+    [HttpGet(nameof(GetBooks))]
+    public async Task<List<Book>> GetBooks(GetBookRequestDto dto)
+    {
+        return await libraryService.GetBooks(dto);
+    }
+    
     [Route(nameof(GetAuthors))]
     [HttpGet]
     public async Task<List<AuthorDto>> GetAuthors()
     {
         return await libraryService.GetAuthors();
-    }
-
-    [HttpGet(nameof(GetBooks))]
-    public async Task<List<BookDto>> GetBooks()
-    {
-        return await libraryService.GetBooks();
     }
 
     [HttpGet(nameof(GetGenres))]
